New updates to APIs, yaml corrected with SWAGGER
