# BackEnd/swagger.yaml
@@ -19,211 +19,266 @@ tags:
   description: API to manage the users in the system
 - name: Park
   description: API to manage the parks in the system
-- Review: Review
+- name: Review
   description: API to manage the review in the system
 - name: Report
   description: API to manage the reports in the system
 - name: PubRequest
   description: API to manage the publication requests in the system
 paths:
-  /user:
+  /users:
     get:
       tags:
       - User
       description: This API will return all users in the system
+      parameters:
+      - name: user_level
+        in: query
+        description: Auth level of the user
+        required: false
+        schema:
+          type: string
       responses:
         "200":
-        description: successful operation
-        content:
-          application/json:
-            type: array
-            schema:
-              items:
-                $ref: '#/components/UserItem'
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                    $ref: '#/components/schemas/Users'
         "400":
-          description: bad input
+          description: Invalid input format
+        "404":
+          description: User not found
+        "500":
+          description: Server Error
     post:
       tags:
       - User
       description: This API will add a new user to the system
-      parameters: 
-      - name: User
-        in: body
-        description: User object
+      requestBody:
+        description: The User object to be added
         required: true
-        schema:
-          $ref: '#/components/schemas/UserItem'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Users'
       responses:
         "201":
           description: successful operation
-        "400":
-          description: "invalid input, object invalid"
         "409":
           description: an existing item already exists
-  /user/{id}:
+        "500":
+          description: Server error
+  /users/{id}:
     get:
       tags:
       - User
       description: This API will return the user in the system who has the id specified
       parameters:
         - name: id
-        in: path
-        description: Park id
-        required: true 
-        schema: 
-          item:
-            $ref: '#/components/Users'
+          in: path
+          description: User id
+          required: true 
+          schema: 
+            $ref: '#/components/schemas/Users'
       responses:
         "200":
           description: successful operation
           content:
-          application/json:
-            schema:
-              $ref: '#/components/UserItem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Users'
         "400":
           description: bad input parameter
-
-
-  /park:
-  get:
-    tags:
-    - Park
-    summary: Searches parks
-    description: Returns an array with all parks in the system, optionally filtered by name or category.
-    parameters:
-    - name: name
-      in: query
-      description: The name of the park to filter by
-      required: false
-      schema:
-        type: string
-    - name: category
-      in: query
-      description: The category of the park to filter by
-      required: false
-      schema:
-        $ref: '#/components/schemas/CategoryEnum'
-    responses:
-      "200":
-        description: Successful operation
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/Parks'
-      "400":
-        description: Invalid input parameter
-
-  post:
-    tags:
-    - Park
-    description: Adds a new park to the system.
-    requestBody:
-      description: The park object to be added
-      required: true
-      content:
-        application/json:
+    delete:
+      tags:
+      - User
+      description: This API will delete the user in the system who has the id specified
+      parameters:
+        - name: id
+          in: path
+          description: User id
+          required: true 
           schema:
-            $ref: '#/components/schemas/ParkItem'
-    responses:
-      "201":
-        description: Park successfully created
-      "400":
-        description: Invalid input format
+              $ref: '#/components/schemas/Users'
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+                schema:
+                    $ref: '#/components/schemas/Users'
+              
+        "400":
+          description: Invalid user ID format
+        "404":
+          description: User not found
+        "500":
+          description: Server Error
+    put:
+      tags:
+      - User
+      description: This API will modify the values of the user in the system who has the id specified
+      parameters:
+      - name: id
+        in: path
+        description: User id
+        required: true 
+        schema:
+          $ref: '#/components/schemas/Users'
+      responses:
+        "200":
+          description: Successful operation
+        "400":
+          description: No fields to update provided
+        "404":
+          description: No user found with the provided ID
+        "500":
+          description: Server error
 
-/park/{id}:
-  get:
-    tags:
-    - Park
-    description: Returns a park in the system with the specified ID.
-    parameters:
-    - name: id
-      in: path
-      description: The unique ID of the park
-      required: true
-      schema:
-        type: string
-    responses:
-      "200":
-        description: Successful operation
+
+  /parks:
+    get:
+      tags:
+      - Park
+      summary: Searches parks
+      description: Returns an array with all parks in the system, optionally filtered by name or category.
+      parameters:
+      - name: name
+        in: query
+        description: The name of the park to filter by
+        required: false
+        schema:
+          type: string
+      - name: category
+        in: query
+        description: The category of the park to filter by
+        required: false
+        schema:
+          $ref: '#/components/schemas/CategoryEnum'
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Parks'
+        "400":
+          description: Invalid input parameter
+
+    post:
+      tags:
+      - Park
+      description: Adds a new park to the system.
+      requestBody:
+        description: The park object to be added
+        required: true
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Parks'
-      "400":
-        description: Invalid input parameter
-      "404":
-        description: Park not found
+      responses:
+        "201":
+          description: Park successfully created
+        "400":
+          description: Invalid input format
 
-  delete:
-    tags:
-    - Park
-    description: Deletes a park in the system with the specified ID.
-    parameters:
-    - name: id
-      in: path
-      description: The unique ID of the park to delete
-      required: true
-      schema:
-        type: string
-    responses:
-      "200":
-        description: Park successfully deleted
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                message:
-                  type: string
-                  example: Park successfully deleted
-      "400":
-        description: Invalid ID format
-      "404":
-        description: Park not found
-      "500":
-        description: Server error
-
-
-  /event:
+  /parks/{id}:
     get:
-    tags:
-    - Event
-    description: This API will all the events in the system
-    parameters:
-    - name: user_id
-      in: query
-      description: filter events by User ID
-      required: false
-      schema:
-        type: string
-    - name: park_id
-      in: query
-      description: filter events by Park ID
-      schema:
-        type: string
-    - name: event status
-      in: query
-      required: false
-      schema:
-        type: boolean
-    responses:
-      "200":
-        description: successful operation
-        content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/EventItem'
-      "400":
-        description: Invalid input format
-      "404":
-        description: Event not found
-      "500":
-        description: Server error
+      tags:
+      - Park
+      description: Returns a park in the system with the specified ID.
+      parameters:
+      - name: id
+        in: path
+        description: The unique ID of the park
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Parks'
+        "400":
+          description: Invalid input parameter
+        "404":
+          description: Park not found
+  
+    delete:
+      tags:
+      - Park
+      description: Deletes a park in the system with the specified ID.
+      parameters:
+      - name: id
+        in: path
+        description: The unique ID of the park to delete
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Park successfully deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Park successfully deleted
+        "400":
+          description: Invalid ID format
+        "404":
+          description: Park not found
+        "500":
+          description: Server error
 
+
+  /events:
+    get:
+      tags:
+      - Event
+      description: This API will all the events in the system
+      parameters:
+      - name: user_id
+        in: query
+        description: filter events by User ID
+        required: false
+        schema:
+          type: string
+      - name: park_id
+        in: query
+        description: filter events by Park ID
+        schema:
+          type: string
+      - name: event status
+        in: query
+        required: false
+        schema:
+          type: boolean
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Events'
+        "400":
+          description: Invalid input format
+        "404":
+          description: Event not found
+        "500":
+          description: Server error
+  
     post:
       tags:
       - Event
@@ -235,21 +290,22 @@ paths:
           required: true 
           schema:
             type: boolean
-        - name:
-          in: body
-          description: Event object
-          required: true 
-          schema:
-            $ref: '#/components/schemas/EventItem'
+      requestBody:
+        description: The User object to be added
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Events'
       responses:
         "201":
-        description: event created
+          description: event created
         "400":
           description: invalid input, object invalid
         "500":
           description: Server error
 
-  /event/{id}:
+  /events/{id}:
     get:
       tags:
       - Event
@@ -260,14 +316,14 @@ paths:
         description: Event id
         required: true 
         schema: 
-          $ref: '#/components/Parks'
+          $ref: '#/components/schemas/Parks'
       responses:
         "200":
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/Events'
+                $ref: '#/components/schemas/Events'
         "400":
           description: Invalid input format
         "404":
@@ -276,7 +332,7 @@ paths:
           description: Server error
     put:
       tags:
-        - Events
+        - Event
       summary: Update an event's description
       description: Allows an admin to update the description of an event.
       parameters:
@@ -316,7 +372,7 @@ paths:
                     type: string
                     example: "Event successfully updated."
                   event:
-                    $ref: '#/components/schemas/Event'
+                    $ref: '#/components/schemas/Events'
         "400":
           description: Invalid input or missing required fields
         "403":
@@ -328,38 +384,37 @@ paths:
     
     delete:
       tags:
-      - Events
-    summary: Delete an event
-    description: Deletes the event with the specified ID.
-    parameters:
-      - name: id
-        in: path
-        description: The unique ID of the event to delete
-        required: true
-        schema:
-          type: string
-    responses:
-      "200":
-        description: Event successfully deleted
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                message:
-                  type: string
-                  example: "Event successfully deleted."
-                event:
-                  $ref: '#/components/schemas/Event'
-      "400":
-        description: Invalid event ID format
-      "404":
-        description: Event not found
-      "500":
-        description: Server error
+      - Event
+      description: Deletes the event with the specified ID.
+      parameters:
+        - name: id
+          in: path
+          description: The unique ID of the event to delete
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Event successfully deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Event successfully deleted."
+                  event:
+                    $ref: '#/components/schemas/Events'
+        "400":
+          description: Invalid event ID format
+        "404":
+          description: Event not found
+        "500":
+          description: Server error
 
 
-  /review:
+  /reviews:
     get:
       tags:
       - Review
@@ -386,7 +441,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Review'
+                  $ref: '#/components/schemas/Reviews'
         "400":
           description: Invalid input format
         "404":
@@ -412,7 +467,7 @@ paths:
         "400":
           description: Invalid input format
 
-  /review/{id}:
+  /reviews/{id}:
     get:
       tags:
       - Review
@@ -431,7 +486,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Review'
+                $ref: '#/components/schemas/Reviews'
         "400":
           description: Invalid input format
         "404":
@@ -471,7 +526,7 @@ paths:
         "500":
           description: Server error
 
-  /report:
+  /reports:
     get:
       tags:
       - Report
@@ -534,7 +589,7 @@ paths:
         "500":
           description: Server error
 
-  /report/{id}:
+  /reports/{id}:
     get:
       tags:
       - Report
@@ -591,6 +646,49 @@ paths:
 
 components:
   schemas:
+    Users:
+      type: object
+      required:
+        - name
+        - surname
+        - email
+        - password
+        - user_level
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the user
+          example: "60d21b4567d0d8992e610b98"
+        name:
+          type: string
+          description: The user's first name
+          example: "John"
+        surname:
+          type: string
+          description: The user's last name
+          example: "Doe"
+        email:
+          type: string
+          description: The user's email address
+          format: email
+          example: "john.doe@example.com"
+        password:
+          type: string
+          description: The user's password
+          example: "$2b$10$N9qo8uLOickgx"
+        user_level:
+          type: string
+          description: The user's level of access
+          enum:
+            - Admin
+            - Client
+          example: "Admin"
+        auth:
+          type: boolean
+          description: Whether the user is authenticated
+          default: false
+          example: false
+        
     Parks:
       type: object
       properties:
@@ -617,6 +715,34 @@ components:
           items:
             type: string
             example: "Running, Pet-Friendly"
+    Events:
+      type: object
+      required:
+        - user_id
+        - park_id
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the event
+          example: "60d21b4567d0d8992e610b98"
+        user_id:
+          type: string
+          description: Reference to the ID of the user who created the event
+          example: "60d21b4567d0d8992e610b97"
+        park_id:
+          type: string
+          description: Reference to the ID of the park associated with the event
+          example: "60d21b4567d0d8992e610b96"
+        status:
+          type: boolean
+          description: Indicates whether the event is active
+          default: false
+          example: true
+        description:
+          type: string
+          description: Additional details or notes about the event
+          default: ""
+          example: "Community park cleanup scheduled for Saturday morning."
     Reports:
       type: object
       properties:
@@ -664,6 +790,13 @@ components:
         - Nature
         - Playground
       example: "Running"
+
+    UserLevelEnum:
+      type: string
+      enum:
+        - Admin
+        - Client
+      example: "Admin"
    
    
 
